# test_ggml

./: CMakeLists.txt  README.md  main.cpp
whisper/: libwhisper.dylib  whisper_ggml_infer.cpp
